2002-07-24  Michael Meeks  <michael@ximian.com>

	* src/nautilus-window-manage-views.c
	(update_title): only set the location bookmark if
	it's non NULL. #87889

2002-07-24  Michael Meeks  <michael@ximian.com>

	* src/nautilus-window.c (nautilus_window_destroy):
	NULL various elements, including the sidebar
	here: #87414

=== nautilus 2.0.1 ===

2002-07-22  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Add major news items

	* configure.in:
	Bump version to 2.0.1
	Require eel 2.0.1

2002-07-22  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-desktop-icon-view.c:
	* src/file-manager/fm-directory-view.c:
	* src/file-manager/nautilus-directory-view-ui.xml:
	* src/nautilus-shell-ui.xml:
	* src/nautilus-sidebar.c:
	Fixup usage of ellipses.
	Patch from Gregory Merchan  <merchan@phys.lsu.edu>

2002-07-22  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file.c (rename_guts):
	Allow renaming desktop files to have a slash in them.

2002-07-22  Alexander Larsson  <alexl@redhat.com>

	* components/history/Nautilus_View_history.server.in.in: 
	* components/notes/Nautilus_View_notes.server.in.in:
	Fix wrong location.

2002-07-22  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-desktop-icon-view.c:
	Fix for #86073. Don't show removable media options for non
	removable media. Also name the unmount menu item "Eject" for
	removable media.
	
2002-07-19  Federico Mena Quintero  <federico@ximian.com>

	Fixes the Nautilus part of #46238; see eel for the other part.

	* components/hardware/nautilus-hardware-view.c
	(nautilus_hardware_view_init): Do not set a hardcoded background
	color; just use the color from the GTK+ theme.  We still set up
	the EelBackground as this handles dragged colors, but it does not
	save them anywhere.

	* components/notes/nautilus-notes.c (make_notes_view): Do not set
	up an EelBackground at all for the text view; just let it use the
	default color from the GTK+ theme.  This code did not handle